add entities and config properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-main.datasource.url = jdbc:hsqldb:file:.jmix/hsqldb/cs
-main.datasource.username = sa
-main.datasource.password =
+main.datasource.url = jdbc:postgresql://localhost:5432/postgres
+main.datasource.username = postgres
+main.datasource.password = 1234
 
 jmix.ui.login-screen-id = cs_LoginScreen
 jmix.ui.main-screen-id = cs_MainScreen
@@ -22,3 +22,27 @@ logging.level.io.jmix.core.AccessLogger = debug
 
 # 'debug' level logs all Jmix debug output
 logging.level.io.jmix = info
+
+# Oauth2
+#spring.security.oauth2.client.registration.azure.client-id=
+#spring.security.oauth2.client.registration.azure.client-secret=
+#spring.security.oauth2.client.registration.azure.scope=
+#spring.security.oauth2.client.provider.azure.issuer-uri=
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=
+
+# Google cloud
+#spring.cloud.gcp.credentials.encoded-key=
+#spring.cloud.gcp.project-id=
+
+# Kafka
+#spring.kafka.bootstrap-servers=
+#spring.kafka.producer.security.protocol=
+#spring.kafka.producer.properties.sasl.mechanism=
+#spring.kafka.producer.properties.sasl.jaas.config=.... required username="" password=""
+#spring.kafka.producer.key-serializer=
+#spring.kafka.producer.key-serializer=
+# spring.kafka.producer.value-serializer=
+
+# Jasper
+#eziophub.ui,jasperreport.embedded.url=
+#eziophub.ui,jasperreport.embedded.jwtSecret=
