--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,19 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    runtimeOnly 'org.hsqldb:hsqldb'
+    runtimeOnly 'org.postgresql:postgresql'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
+
+    implementation 'com.google.cloud:spring-cloud-gcp-starter'
+    implementation 'io.jmix.oidc:jmix-oidc-starter'
+    implementation 'org.springframework.kafka:spring-kafka'
+
 }
 
 test {
