add enum,service, properties and fix entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,11 @@ logging.level.io.jmix = info
 #spring.kafka.producer.key-serializer=
 #spring.kafka.producer.key-serializer=
 # spring.kafka.producer.value-serializer=
+#cs.ui.exception.message.deviceId=
+#cs.ui.exception.message.deviceName=
+#cs.ui.exception.kafka.topic=
+#cs.ui.exception.kafka.enabled=
 
 # Jasper
-#eziophub.ui,jasperreport.embedded.url=
-#eziophub.ui,jasperreport.embedded.jwtSecret=
+#cs.ui.jasperreport.embedded.url=
+#cs.ui.jasperreport.embedded.jwtSecret=
