--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-main.datasource.url = jdbc:postgresql://localhost:5432/postgres
+main.datasource.url = jdbc:postgresql://localhost:5432/coffeeshop
 main.datasource.username = postgres
 main.datasource.password = 1234
+spring.jpa.generate-ddl=false
 
 jmix.ui.login-screen-id = cs_LoginScreen
 jmix.ui.main-screen-id = cs_MainScreen
 jmix.ui.menu-config = com/company/coffeeshop/menu.xml
 jmix.ui.composite-menu = true
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.operationsSorter=method
 
 jmix.core.available-locales = en
 
