--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,12 +28,13 @@ logging.level.io.jmix.core.AccessLogger = debug
 # 'debug' level logs all Jmix debug output
 logging.level.io.jmix = info
 
-# Oauth2
-#spring.security.oauth2.client.registration.azure.client-id=
-#spring.security.oauth2.client.registration.azure.client-secret=
-#spring.security.oauth2.client.registration.azure.scope=
-#spring.security.oauth2.client.provider.azure.issuer-uri=
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=
+# oauth2
+spring.security.oauth2.client.registration.azure.client-id=fc54f4fd-b39e-4793-ba77-fc7561a26ecd
+spring.security.oauth2.client.registration.azure.client-secret=5Ba8Q~dxds0ElG6cQjHdHX53knxp9EIOK-~4mcsb
+spring.security.oauth2.client.registration.azure.scope=openid, profile, email
+spring.security.oauth2.client.provider.azure.issuer-uri=https://sts.windows.net/1117f027-d539-40de-850d-c10eaad64b78/
+#Jmix application may work as a resource server. To specify which authorization server to use, define the following application property:
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://sts.windows.net/1117f027-d539-40de-850d-c10eaad64b78/
 
 # Google cloud
 #spring.cloud.gcp.credentials.encoded-key=
